# refactored-rotary-phone

./: CMakeLists.txt  CMakePresets.json  README.md
assert_project/: CMakeLists.txt  main_assert.cpp  task1.cpp  task1.h
ctest_project/: CMakeLists.txt  task2.cpp  task2.h
ctest_project/tests/: CMakeLists.txt  test_task2_1.cpp  test_task2_2.cpp  test_task2_3.cpp
gtest_project/: CMakeLists.txt  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h
gtest_project/gtests/: CMakeLists.txt  tests.cpp
